# loonix-tunes

./: .gitignore  Cargo.toml  PKGBUILD  README.md  build.rs  create_pkg.sh  loonix-tunes.sh
.cargo/: config.toml
.github/workflows/: release.yml
assets/: eqpreset.json  fxpreset.json
packaging/linux/: loonix-tunes.desktop
packaging/windows/: deploy.bat  resource.rc
packaging/windows/include/libavcodec/: avcodec.h  codec_par.h  packet.h  version.h
packaging/windows/include/libavfilter/: version.h
packaging/windows/include/libavformat/: version.h
packaging/windows/include/libavutil/: ffversion.h  frame.h  version.h
qml/: Ui.qml  qml.qrc
qml/ui/: Dsp.qml  Eq.qml  EqPopup.qml  Fx.qml  FxPopup.qml  Playlist.qml  PlaylistContextMenu.qml  Pref.qml  RenameDialog.qml  Tab.qml  TabContextMenu.qml  TabCustom.qml  TabFavorites.qml  TabMusic.qml  TabQueue.qml  ThemeSlider.qml  TrackInfo.qml  qmldir
qml/ui/components/: TrackInfo.qml
qml/ui/contextmenu/: AppearanceContextMenu.qml  PlaylistContextMenu.qml  TabContextMenu.qml
qml/ui/pref/: PrefAbout.qml  PrefAppearance.qml  PrefAudio.qml  PrefButton.qml  PrefCollapsibleSection.qml  PrefDonate.qml  PrefDropdown.qml  PrefHardware.qml  PrefLibrary.qml  PrefPro.qml  PrefReportBug.qml  PrefSlider.qml  PrefSwitch.qml  PrefTab.qml  PrefThemeEditor.qml  ReportBug.qml  ThemeEditor.qml
qml/ui/tabs/: Tab.qml  TabCustom.qml  TabFavorites.qml  TabMusic.qml  TabQueue.qml
skill/: todo.md
src/: dbus_service.rs  dbusservice.rs  main.rs
src/audio/: audio_bus.rs  audio_output.rs  audiobus.rs  audiooutput.rs  config.rs  dac.rs  decoder.rs  highres.rs  metadata.rs  mod.rs  playlist.rs  popup.rs  presets.rs  pulsebt.rs  resample.rs  scanner.rs  sysmedia.rs  systemcheck.rs  wireless.rs
src/audio/buffer/: mod.rs  ring_buffer.rs  ringbuffer.rs  shared_ring_buffer.rs
src/audio/dsp/: abrepeat.rs  bassbooster.rs  biquad.rs  chain.rs  compressor.rs  crossfeed.rs  crystalizer.rs  eq.rs  eqpreamp.rs  limiter.rs  middleclarity.rs  mod.rs  normalizer.rs  pitchshifter.rs  preamp.rs  rack.rs  reverb.rs  rubberbandffi.rs  stereoenhance.rs  stereowidth.rs  surround.rs
src/audio/dsp/dspstd/: mod.rs  stdabrepeat.rs  stdbiquad.rs  stdcompressor.rs  stdcrossfeed.rs  stdcrystalizer.rs  stdeq.rs  stdeqpreamp.rs  stdlimiter.rs  stdmiddleclarity.rs  stdnormalizer.rs  stdpitchshifter.rs  stdreverb.rs  stdrubberbandffi.rs  stdstereoenhance.rs  stdstereowidth.rs  stdsurround.rs
src/audio/engine/: abloop.rs  abrepeat.rs  clock.rs  engine.rs  library.rs  mod.rs  scheduler.rs  seek.rs  state.rs
src/audio/io/: audiobus.rs  audiooutput.rs  decoder.rs  resample.rs
src/core/: dspconfig.rs  favorites.rs  library.rs  mod.rs  playback.rs
src/core/config/: appconfig.rs  dspconfig.rs  mod.rs  presets.rs
src/core/services/: mod.rs  playback.rs  sysmedia.rs  wireless.rs
src/ui/: core.rs  dsp.rs  dspcontroller.rs  mod.rs  playerbridge.rs  playlistcontextmenu.rs  queue.rs  reportbug.rs  theme.rs  updater.rs
src/ui/bridge/: core.rs  dspcontroller.rs  playerbridge.rs
src/ui/components/: popup.rs  theme.rs
(+14 files in other folders)
