[package]
name = "loonix-tunes"
version = "1.0.2"
edition = "2021"
authors = ["citz"]
description = "Loonix Tunes - Native Desktop Music Player"
license = "GPL-3.0"

[package.metadata.wix]
eula = false

[dependencies]
# --- CORE AUDIO ENGINE (Universal) ---
ffmpeg-next = "8.0"
cpal = "0.17.3"
ringbuf = "0.4"
biquad = "0.6.0"
dasp = "0.11"
freeverb = "0.2.0"
soxr = "0.6"
crossbeam = "0.8"
arc-swap = "1.6"
memmap2 = "0.9"
parking_lot = "0.12"

# --- LINUX ONLY: Native PipeWire, DBus & UI ---
[target.'cfg(target_os = "linux")'.dependencies]
pipewire = "0.9"
libspa = "0.9"
zbus = "5.6.1"
qmetaobject = "0.2.10"
glib = { version = "0.22.3", features = ["v2_68"] }
x11 = "2.20"
souvlaki = "0.6"

# --- WINDOWS ONLY: UI (tanpa glib) ---
[target.'cfg(target_os = "windows")'.dependencies]
qmetaobject = "0.2.10"

# --- ANDROID ONLY: UI ---
[target.'cfg(target_os = "android")'.dependencies]
qmetaobject = "0.2.10"

# --- DESKTOP ONLY (Linux + Windows): Trash ---
[target.'cfg(any(target_os = "linux", target_os = "windows"))'.dependencies]
trash = "5.2.5"
which = "6.0"

# --- UI & UTILS (Universal) ---
cstr = "0.2"
dirs = "6.0.0"
rand = "0.10.0"
rfd = "0.17.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.13.2", features = ["blocking", "json"] }

url = "2.5.8"
urlencoding = "2.1"
crossbeam-channel = "0.5.15"

[build-dependencies]
winres = "0.1"